--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 <header>
 <div class="header-content">
 <h1>Lytegen Solar</h1>
-<h2>with Dillon Stimpson</h2>
+<h2>with Shirley Jones</h2>
 <p>Switch to clean, renewable energy with confidence.<br>Schedule your <strong>Free In-Home Consultation</strong> or request a <strong>Free Estimate</strong> today!</p>
 <div class="header-buttons">
 <button onclick="showPage('consultation')">Free Consultation</button>
@@ -156,7 +156,7 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 
 <footer>
 <h3>Lytegen Solar</h3>
-<p>Dillon Stimpson | (203) 521-4551 | Dillon@Lytegen.com</p>
+<p>Shirley Jones | (510) 866-8431 | Shirleyj@Lytegen.com</p>
 <p>&copy; 2025 Lytegen | Empowering homes with clean, renewable energy</p>
 </footer>
 
@@ -218,4 +218,5 @@ list.appendChild(li);
 </script>
 
 </body>
+
 </html>
