--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Lytegen Solar | Dillon Stimpson</title>
+<title>Lytegen Solar | Shirley Jones</title>
 <style>
 * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Helvetica Neue', Arial, sans-serif; }
 body { background-color: #f9fafb; color: #333; }
@@ -220,3 +220,4 @@ list.appendChild(li);
 </body>
 
 </html>
+
