--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 <section class="about">
 <h2>Why Choose Lytegen?</h2>
 <p>At Lytegen Solar, we make it simple to go solar. With free in-home consultations and no-obligation estimates, you’ll receive a clear picture of how much you can save and how solar can boost your home’s value.  
-<br><br>I’m <strong>Dillon Stimpson</strong>, your dedicated solar consultant. My mission is to provide every homeowner with honest, transparent information and top-quality solar technology for long-term savings and sustainability.</p>
+<br><br>I’m <strong>Shirley Jones</strong>, your dedicated solar consultant. My mission is to provide every homeowner with honest, transparent information and top-quality solar technology for long-term savings and sustainability.</p>
 </section>
 
 <section class="reasons">
@@ -103,12 +103,13 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 <button class="back-btn" onclick="showPage('home')">← Back to Home</button>
 <h2>Free In-Home Consultation</h2>
 <p>Book an in-home visit where we’ll review your current utility bill, design a custom solar system, and provide a full pricing proposal — all for free.</p>
-<form id="consultationForm">
-<input type="text" placeholder="Full Name" required>
-<input type="email" placeholder="Email Address" required>
-<input type="tel" placeholder="Phone Number" required>
-<textarea rows="4" placeholder="Message or Address"></textarea>
+<form id="consultationForm" action="https://formspree.io/f/mkgpvyed" method="POST">
+<input type="text" name="name" placeholder="Full Name" required>
+<input type="email" name="email" placeholder="Email Address" required>
+<input type="tel" name="phone" placeholder="Phone Number" required>
+<textarea name="message" rows="4" placeholder="Message or Address"></textarea>
 <button type="submit" class="submit-btn">Submit Request</button>
+<p id="consult-msg" style="color:green; margin-top:10px;"></p>
 </form>
 </section>
 </div>
@@ -119,12 +120,13 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 <button class="back-btn" onclick="showPage('home')">← Back to Home</button>
 <h2>Get a Free Estimate</h2>
 <p>We’ll analyze your energy usage from your utility bill and provide a free solar system estimate tailored to your home’s needs — no visit required.</p>
-<form id="estimateForm">
-<input type="text" placeholder="Full Name" required>
-<input type="email" placeholder="Email Address" required>
-<input type="tel" placeholder="Phone Number" required>
-<textarea rows="4" placeholder="Upload utility info or message"></textarea>
+<form id="estimateForm" action="https://formspree.io/f/mkgpvyed" method="POST">
+<input type="text" name="name" placeholder="Full Name" required>
+<input type="email" name="email" placeholder="Email Address" required>
+<input type="tel" name="phone" placeholder="Phone Number" required>
+<textarea name="message" rows="4" placeholder="Upload utility info or message"></textarea>
 <button type="submit" class="submit-btn">Request Estimate</button>
+<p id="estimate-msg" style="color:green; margin-top:10px;"></p>
 </form>
 </section>
 </div>
@@ -186,26 +188,32 @@ document.getElementById('loginError').innerText='Incorrect username or password.
 }
 });
 
-// Submission forms
-function handleForm(formId){
-document.getElementById(formId).addEventListener('submit', function(e){
-e.preventDefault();
-let inputs = this.querySelectorAll('input, textarea');
-submissions.push({
-name: inputs[0].value.trim(),
-email: inputs[1].value.trim(),
-phone: inputs[2].value.trim(),
-notes: inputs[3].value.trim()
-});
-alert('Thank you! Your submission has been recorded.');
-this.reset();
-});
-}
+// ✅ Formspree submission handling
+document.querySelectorAll("form[action*='formspree']").forEach(form => {
+  form.addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const msg = form.querySelector("p[id$='-msg']");
+    msg.textContent = "Sending...";
+    msg.style.color = "gray";
 
-handleForm('consultationForm');
-handleForm('estimateForm');
+    const response = await fetch(form.action, {
+      method: "POST",
+      body: new FormData(form),
+      headers: { "Accept": "application/json" }
+    });
 
-// Render submissions in admin portal
+    if (response.ok) {
+      msg.textContent = "✅ Message sent successfully! We'll contact you soon.";
+      msg.style.color = "lightgreen";
+      form.reset();
+    } else {
+      msg.textContent = "⚠️ There was a problem sending your message. Please try again.";
+      msg.style.color = "orange";
+    }
+  });
+});
+
+// Render submissions in admin portal (still local)
 function renderSubmissions(){
 let list = document.getElementById('admin-list');
 list.innerHTML='';
@@ -218,6 +226,6 @@ list.appendChild(li);
 </script>
 
 </body>
-
 </html>
+
 
