--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 <input type="text" name="name" placeholder="Full Name" required>
 <input type="email" name="email" placeholder="Email Address" required>
 <input type="tel" name="phone" placeholder="Phone Number" required>
-<textarea name="message" rows="4" placeholder="Message or Address"></textarea>
+<textarea name="message" rows="4" placeholder="Tell us a bit about your home, energy goals, or any concerns"></textarea>
 <button type="submit" class="submit-btn">Submit Request</button>
 <p id="consult-msg" style="color:green; margin-top:10px;"></p>
 </form>
@@ -124,7 +124,7 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 <input type="text" name="name" placeholder="Full Name" required>
 <input type="email" name="email" placeholder="Email Address" required>
 <input type="tel" name="phone" placeholder="Phone Number" required>
-<textarea name="message" rows="4" placeholder="Upload utility info or message"></textarea>
+<textarea name="message" rows="4" placeholder="Tell us about your home, energy goals, or any concerns"></textarea>
 <button type="submit" class="submit-btn">Request Estimate</button>
 <p id="estimate-msg" style="color:green; margin-top:10px;"></p>
 </form>
@@ -227,5 +227,6 @@ list.appendChild(li);
 
 </body>
 </html>
+
 
 
