--- a/index.html
+++ b/index.html
@@ -156,11 +156,30 @@ footer { background-color: #004b63; color: white; text-align: center; padding: 3
 </section>
 </div>
 
-<footer>
-<h3>Lytegen Solar</h3>
-<p>Shirley Jones | (510) 866-8431 | Shirleyj@Lytegen.com</p>
-<p>&copy; 2025 Lytegen | Empowering homes with clean, renewable energy</p>
+<footer style="text-align:center; background-color:#004b63; color:white; padding:30px 20px;">
+  <h3>Lytegen Solar</h3>
+  <p>Shirley Jones | (510) 866-8431 | 
+    <a href="mailto:Shirleyj@Lytegen.com" style="color:#a9d6e5; text-decoration:none;">Shirleyj@Lytegen.com</a>
+  </p>
+
+  <div style="margin-top:20px;">
+    <p style="margin-bottom:8px;">Share this page:</p>
+    <a href="mailto:?subject=Check%20out%20Lytegen%20Solar!&body=Here%27s%20a%20great%20local%20solar%20contractor%20I%20found:%20https%3A%2F%2Fshirleyj-coder.github.io%2FSolar-Panels%2F" 
+       style="color:#a9d6e5; margin:0 10px; text-decoration:none;">📧 Email</a>
+    <a href="sms:?&body=Check%20out%20Lytegen%20Solar%3A%20https%3A%2F%2Fshirleyj-coder.github.io%2FSolar-Panels%2F" 
+       style="color:#a9d6e5; margin:0 10px; text-decoration:none;">📱 Text</a>
+    <a href="https://api.whatsapp.com/send?text=Check%20out%20Lytegen%20Solar%3A%20https%3A%2F%2Fshirleyj-coder.github.io%2FSolar-Panels%2F" 
+       target="_blank" style="color:#a9d6e5; margin:0 10px; text-decoration:none;">💬 WhatsApp</a>
+  </div>
+
+  <div style="margin-top:25px;">
+    <p>&copy; 2025 Lytegen | Empowering homes with clean, renewable energy</p>
+    <p style="font-size:0.9rem; color:#a9d6e5; margin-top:8px;">
+      Serving Oakland, Alameda, Berkeley, San Leandro, and surrounding Bay Area communities.
+    </p>
+  </div>
 </footer>
+
 
 <script>
 let submissions = [];
@@ -227,6 +246,7 @@ list.appendChild(li);
 
 </body>
 </html>
+
 
 
 
